refactor: Simplify assertions and mock verifications in `ConfigYmlParserTest`